reated html content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <title>Excrusion</title>
 </head>
 <body>
-    
+    <h1>Discover hidden places in the world around you</h1>
+    <a>Download Excursion (Coming soon!)</a>
+    <video src="resources/videos/excursion.mp4"></video>Video Not supported</video>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg">
+    <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png">
+    <h2>Coming Soon for iPhone and Android</h2>
+    <a>Download Excursion (Coming soon!)</a>
+
+    <footer>
+        <p>&copy; Excursion</p>
+    </footer>
 </body>
 </html>
