--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
 </head>
 <body>
     <h1>Discover hidden places in the world around you</h1>
-    <a>Download Excursion (Coming soon!)</a>
-    <video src="resources/videos/excursion.mp4"></video>Video Not supported</video>
+    <a href="#">Download Excursion (Coming soon!)</a>
+
+
+    <video src="resources/videos/excursion.mp4" autoplay></video></video>
+
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg">
+
+
     <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png">
     <h2>Coming Soon for iPhone and Android</h2>
     <a>Download Excursion (Coming soon!)</a>
 
-    <footer>
+    <footer class="right">
         <p>&copy; Excursion</p>
     </footer>
 </body>
