--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/resources/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Excrusion</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
     <a href="#">Download Excursion (Coming soon!)</a>
 
 
-    <video src="resources/videos/excursion.mp4" autoplay loop></video></video>
+    <video src="excursion.mp4" autoplay loop></video></video>
 
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
