--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="#">Download Excursion (Coming soon!)</a>
 
 
-    <video src="/excursion.mp4" autoplay loop></video></video>
+    <video src="vid/excursion.mp4" autoplay loop></video></video>
 
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
